# datascience-containers

./: .dockerignore  .gitignore  Makefile  README.md  build_arg.properties  pyproject.toml  sample.env
certs/: generate.sh
deployments/: .gitattributes  kustomization.yaml
deployments/base/: deployment.yaml  kustomization.yaml  kustomizeconfig.yaml  service.yaml  servicemonitor.yaml
deployments/base/config/: application.properties
deployments/overlays/: application.properties  deployment.patch.yaml  kustomization.yaml  service.patch.yaml
dists/vscode-web/: Dockerfile  notebook-extensions.txt  vscode-extensions.txt
docs/: generate_self_signed_cert.md  serve-vscode-on-web.md
rootfs/etc/confd/conf.d/: default-site.toml  nginx.toml  proxy_locations.toml
rootfs/etc/confd/templates/: default-site.conf.tmpl  nginx.conf.tmpl  proxy_locations.conf.tmpl
rootfs/etc/cont-init.d/: 00-init-setup  00-vscode-server  01-nginx-config  01-vscode-server  02-nginx-config
rootfs/etc/services.d/nginx/: run
rootfs/etc/services.d/nginx-reloader/: run
rootfs/etc/services.d/notebook/: run
rootfs/etc/services.d/ttyd/: run
rootfs/etc/services.d/vscode-server/: run
rootfs/opt/requirements/: 00-constraints.txt  00-general-requirements.txt  01-cpu-requirements.txt  01-gpu-requirements.txt  02-ml-requirements.txt  03-dl-requirements.txt  04-llm-requirements.txt
